--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,12 @@
       <h3> I'm in the App Component!</h3>
       <hr>
       <app-servers></app-servers>
-      <app-success-alert></app-success-alert>
-      <app-warning-alert></app-warning-alert>
+      <!--<app-success-alert></app-success-alert>
+      <app-warning-alert></app-warning-alert>-->
     </div>
   </div>
 </div>
+
+<hr>
+
+<app-third-assignment></app-third-assignment>
