--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -8,13 +8,13 @@
         class="form-control"
         (input)= "onUpdateServerName($event)"
       >
-
+    -->
       <input
         type="text"
         class="form-control"
         [(ngModel)]="serverName"
-      >-->
-      <!--<p> {{ serverName }}</p>-->
+      >
+      <!--<p> {{ serverName }}</p>
 
       <input
         type="text"
@@ -25,17 +25,25 @@
         Add user
       </button>
       <p> Username: {{ userName }}</p>
-      <!-- <button
+      <p [innerText]="allowNewServer"> </p>
+
+      -->
+       <button
         class="btn btn-primary"
         [disabled]="!allowNewServer"
         (click) = "onCreateServer()"
       > Add server </button>
-      -->
-      <p [innerText]="allowNewServer"> </p>
-      <p> {{serverCreation}}</p>
+      <p> {{serverCreation}} </p>
     </div>
   </div>
 </div>
+<p *ngIf="serverCreated; else noServer">
+  Server was created, server name is {{serverName}}
+</p>
+<ng-template #noServer>
+  <p>
+    No server was created!
+  </p>
+</ng-template>
 
-<app-server></app-server>
-<app-server></app-server>
+<app-server *ngFor="let server of servers"></app-server>
