--- a/src/app/third-assignment/third-assignment.component.html
+++ b/src/app/third-assignment/third-assignment.component.html
@@ -17,9 +17,9 @@
       </button>
       <p *ngIf="displayed"> Secret password = tuna</p>
       <div
-        *ngFor="let logItem of logs"
-        [ngStyle]="{backgroundColor: logItem >= 5 ? 'blue' : 'transparent'}"
-        [ngClass]="{'white-text': logItem >= 5}"
+        *ngFor="let logItem of logs; let i = index"
+        [ngStyle]="{backgroundColor: i >= 4 ? 'blue' : 'transparent'}"
+        [ngClass]="{'white-text': i >= 4}"
       >
         {{ logItem }}
       </div>
