--- a/Directives/src/app/app.component.html
+++ b/Directives/src/app/app.component.html
@@ -29,6 +29,9 @@
       <p appBasicHighlight>
         Style me with basic directive!
       </p>
+      <p appBetterHighlight>
+        Style me with basic directive!
+      </p>
     </div>
   </div>
 </div>
