Customer property binding directives

--- a/Directives/src/app/app.component.html
+++ b/Directives/src/app/app.component.html
@@ -29,7 +29,7 @@
       <p appBasicHighlight>
         Style me with basic directive!
       </p>
-      <p appBetterHighlight>
+      <p [appBetterHighlight]="'red'" defaultColor='yellow' >
         Style me with basic directive!
       </p>
     </div>
