--- a/Directives/src/app/app.component.html
+++ b/Directives/src/app/app.component.html
@@ -25,6 +25,26 @@
             {{ even }}
           </li>
         </div>
+        <!--<ng-template ngIf="!onlyOdd">-->
+          <!--<div>-->
+            <!--<li-->
+              <!--class="list-group-item"-->
+              <!--*ngFor="let even of evenNumbers"-->
+              <!--[ngStyle]="{backgroundColor: odd % 2 !== 0 ? 'yellow' : 'transparent'}"-->
+            <!--&gt;-->
+              <!--{{ even }}-->
+            <!--</li>-->
+          <!--</div>-->
+        <!--</ng-template>-->
+        <div *appUnless="onlyOdd">
+          <li
+          class="list-group-item"
+          *ngFor="let even of evenNumbers"
+          [ngStyle]="{backgroundColor: odd % 2 !== 0 ? 'yellow' : 'transparent'}"
+          >
+          {{ even }}
+          </li>
+        </div>
       </ul>
       <p appBasicHighlight>
         Style me with basic directive!
@@ -32,6 +52,12 @@
       <p [appBetterHighlight]="'red'" defaultColor='yellow' >
         Style me with basic directive!
       </p>
+      <div [ngSwitch]="value">
+        <p *ngSwitchCase="5"> Value is 5 </p>
+        <p *ngSwitchCase="10"> Value is 10 </p>
+        <p *ngSwitchCase="100"> Value is 100 </p>
+        <p *ngSwitchDefault> Value is default </p>
+      </div>
     </div>
   </div>
 </div>
