--- a/Project3Section/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/Project3Section/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -25,7 +25,7 @@
         <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#">To shopping list</a></li>
+        <li><a (click)="onAddToShoppingList()" style="cursor: pointer">To shopping list</a></li>
         <li><a href="#">Edit recipe</a></li>
         <li><a href="#">Delete Recipe</a></li>
       </ul>
@@ -39,6 +39,10 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingred of recipe.ingredients">
+        {{ ingred.name }} - {{ ingred.amount }}
+      </li>
+    </ul>
   </div>
 </div>
