--- a/Project3Section/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/Project3Section/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -4,30 +4,28 @@
       [src]="recipe.imagePath"
       alt="{{ recipe.name }}"
       class="img-responsive"
-      style="max-height: 300px"
-    >
+      style="max-height: 300px;">
   </div>
 </div>
-
 <div class="row">
   <div class="col-xs-12">
     <h1>{{ recipe.name }}</h1>
   </div>
 </div>
-
 <div class="row">
   <div class="col-xs-12">
     <div
       class="btn-group"
-      appDropdown
-    >
-      <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe
-        <span class="caret"></span>
+      appDropdown>
+      <button
+        type="button"
+        class="btn btn-primary dropdown-toggle">
+        Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a (click)="onAddToShoppingList()" style="cursor: pointer">To shopping list</a></li>
-        <li><a href="#">Edit recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
+        <li><a (click)="onAddToShoppingList()" style="cursor: pointer;">To Shopping List</a></li>
+        <li><a style="cursor: pointer;" (click)="onEditRecipe()">Edit Recipe</a></li>
+        <li><a style="cursor: pointer;">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
@@ -40,8 +38,10 @@
 <div class="row">
   <div class="col-xs-12">
     <ul class="list-group">
-      <li class="list-group-item" *ngFor="let ingred of recipe.ingredients">
-        {{ ingred.name }} - {{ ingred.amount }}
+      <li
+        class="list-group-item"
+        *ngFor="let ingredient of recipe.ingredients">
+        {{ ingredient.name }} - {{ ingredient.amount }}
       </li>
     </ul>
   </div>
