--- a/Project3Section/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/Project3Section/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -8,23 +8,23 @@
             type="text"
             id="name"
             class="form-control"
-            #nameInput
-          >
+            #nameInput>
         </div>
         <div class="col-sm-2 form-group">
-          <label for="amount"></label>
+          <label for="amount">Amount</label>
           <input
             type="number"
             id="amount"
             class="form-control"
-            #amountInput
-          >
+            #amountInput>
         </div>
-          <div class="col-xs-12">
-            <button class="btn btn-success" type="button" (click)="onAddItem()">Add</button>
-            <button class="btn btn-danger" type="button">Delete</button>
-            <button class="btn btn-primary" type="button">Clear</button>
-          </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <button class="btn btn-success" type="submit" (click)="onAddItem()">Add</button>
+          <button class="btn btn-danger" type="button">Delete</button>
+          <button class="btn btn-primary" type="button">Clear</button>
+        </div>
       </div>
     </form>
   </div>
